--- a/public/styles.css
+++ b/public/styles.css
@@ -589,7 +589,6 @@ body .fire .logs:before {
   right: 50px;
   width: 50px;
   height: 50px;
-  box-shadow: 1px 1px 1px 1px #ffffff3d;
   font-size: 24px;
 }
 
@@ -636,6 +635,9 @@ body .fire .logs:before {
   width: 50%;
 }
 
+#table-cards-modal {
+  padding: 10px;
+}
 /*//mobile*/
 @media screen and (max-width: 900px) {
   :root {
@@ -646,7 +648,7 @@ body .fire .logs:before {
     font-size: 25px;
   }
   .zoom-btn{
-    right: 20px;
+    right: 10px;
     bottom: 20px;
   }
 }
