--- a/public/styles.css
+++ b/public/styles.css
@@ -598,14 +598,15 @@ body .fire .logs:before {
 .table-cards {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(46px, 1fr));
+  /*grid-template-columns: repeat(auto-fit, minmax(46px, 1fr));*/
+  grid-template-columns: repeat(7, 1fr);
 
   gap:5px;
   position: relative;
 }
 
 .table-cards__item{
-  width: 50px;
+  /*width: 50px;*/
   height: 70px;
   background: var(--red);
   border-radius: 10px;
@@ -684,6 +685,7 @@ body .fire .logs:before {
   #table-cards-modal {
     padding: 5px;
   }
+
 }
 @media screen and (max-width: 900px) {
   :root {
@@ -701,5 +703,15 @@ body .fire .logs:before {
     width: 50px;
     vertical-align: bottom;
     margin-left: -11px;
+  }
+  .modal{
+    width: 97%!important;
+  }
+
+
+}
+@media screen and (min-width: 900px){
+  #table-cards-modal {
+    max-width: 400px;
   }
 }
