--- a/public/styles.css
+++ b/public/styles.css
@@ -571,11 +571,19 @@ body .fire .logs:before {
 }
 
 .modal--noty {
+  padding: 0!important;
+  margin: 0;
+}
 
+.modal--noty img {
+  width: 100%;
 }
 .modal--noty h1 {
-  color:#dc2626;
+  color: #fff;
+  font-weight: bold;
   font-size: 30px;
+  text-align: center;
+  position: absolute;
 }
 
 .user-btn {
@@ -681,8 +689,56 @@ body .fire .logs:before {
   position: fixed;
   top: 0;
   left: 0;
-
   z-index: 9999;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+.toggle-btn {
+  position: relative;
+  height: 30px;
+  width: 70px;
+  background-color: #09090bb8;
+  border-radius: 100px;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+.toggle-btn.toggle-btn--done {
+  background: #e0ffff85;
+}
+.toggle-btn .icon {
+  position: absolute;
+  top: 50%;
+  left: -1px;
+  transform: translateY(-50%);
+  height: 40px;
+  width: 40px;
+  font-size: 30px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #09090bb8;
+  border: 1px solid #999;
+  border-radius: 50%;
+  transition: all 0.4s ease;
+}
+.toggle-btn.toggle-btn--done .icon {
+  left: calc(100% - 38px);
+  color: #fff;
+  background: var(--green);
+  border: 1px solid #e0ffff;
+}
+.toggle-btn.toggle-btn--done .icon i {
+  animation: spin 0.5s;
+}
+@keyframes spin {
+  to {
+    transform: rotate(1turn);
+  }
 }
 
 
@@ -699,7 +755,6 @@ body .fire .logs:before {
     --fire-size:40vh;
   }
   .modal--noty h1 {
-    color:#dc2626;
     font-size: 25px;
   }
   .zoom-btn{
