--- a/public/styles.css
+++ b/public/styles.css
@@ -1,28 +1,12 @@
 @font-face {
   font-family: "Henry";
-  src: url('henny-penny.regular.ttf')  format('truetype');
-
-
-}
+  src: url('henny-penny.regular.ttf')  format('truetype');  }
 
 :root{
   --red:#b22323;
   --green:rgb(23, 95, 44);
 }
 
-.version{
-  font-size: 12px;
-  letter-spacing: 0px;
-}
-.jquery-modal{
-  z-index: 1000!important;
-}
-@media (max-width: 450px){
-  .version {
-    position: absolute;
-    right: -14px;
-  }
-}
 .card {
   height: 320px;
   perspective: 1200px;
@@ -87,9 +71,9 @@
   background-color: var(--red);
   border-radius: 0.5rem;
   box-shadow:
-    rgba(0, 0, 0, 0.106) 0px 0px 0px 1px,
-    rgba(0, 0, 0, 0.02) 0px 9px 20px 0px,
-    rgba(0, 0, 0, 0.106) 0px 1px 2px 0px;
+          rgba(0, 0, 0, 0.106) 0px 0px 0px 1px,
+          rgba(0, 0, 0, 0.02) 0px 9px 20px 0px,
+          rgba(0, 0, 0, 0.106) 0px 1px 2px 0px;
   display: flex;
   align-items: center;
 
@@ -99,6 +83,7 @@
   perspective: 320px;
 }
 .card--past {
+  overflow: hidden;
 }
 .card--done .card__front{
   background: var(--green)
@@ -108,14 +93,6 @@
 }
 .card.card--active:hover .card__front:not(.flipped) {
   transform: perspective(1000px) rotateY(10deg);
-}
-
-.status-pic {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  line-height:140px;
 }
 .badge-passed {
   z-index: 10;
@@ -136,7 +113,7 @@
   text-align: center;
   color: #000;
   justify-content: center;
-  z-index: 12;
+  z-index: 10;
   transition: all 0.9s ease;
   will-change: contents;
 }
@@ -149,9 +126,6 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  position: absolute;
-  transform: translate(35px, 50%) rotateY(0) skew(0deg, 0deg);
-
 }
 .task-actions > * {
   margin-bottom: 10px;
@@ -698,7 +672,6 @@ body .fire .logs:before {
 .today-timer {
   position: absolute;
   top: 20px;
-  left: 20px;
   text-shadow: 1px 1px 2px #09090b;
 }
 
@@ -773,157 +746,31 @@ body .fire .logs:before {
   }
 }
 
-
-
-
-
-
-.book {
-  transform-style: preserve-3d;
-  position: relative;
-  height: 300px;
-  cursor: pointer;
-  backface-visibility: visible;
-  font-family:"Henry",sans-serif;
-
+body {
+  font-family: 'Henry',sans-serif;
 }
 
-.book-day {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 50px;
-}
-.front, .back, .page1, .page2, .page3, .page4, .page5, .page6 {
-  transform-style: preserve-3d;
+span.second-day {
   position: absolute;
-  width: 240px;
-  height: 100%;
-  top: 0; left: 0;
-  transform-origin: left center;
-  transition: transform .5s ease-in-out, box-shadow .35s ease-in-out;
+  top: 116px;
+  left: 128px;
+  font-size: 33px;
+  color: #000;
+  transform: rotate(-46deg) skew(0deg, 17deg);
 }
 
-.front:after {
-  content: "";
+span.first-day {
   position: absolute;
-  left: -1px;
-  right: -1px;
-  bottom: -1px;
-  top: -1px;
-  background: transparent;
-  border-radius: .2em .5em .5em .2em;
-}
-
-
-.card--past .front:after {
-  border:1px solid var(--red);
-}
-
-.card--done .front:after {
-  border:1px solid var(--green);
-}
-.front, .back {
-  background: var(--red);
-}
-
-.card--done .front {
-  background: var(--green);
-}
-
-.front, .page1, .page3, .page5 {
-  border-radius:.2em  .5em  .5em  .2em;
-  /*border-top-right-radius: .5em;*/
-  /*border-top-left-radius: .2em;  */
-  /*border-bottom-left-radius: .2em;*/
+  top: 128px;
+  left: 74px;
+  font-size: 33px;
+  color: #000;
+  transform: rotate(-39deg) skew(0deg, 19deg);
 
 }
 
-.back, .page2, .page4, .page6 {
-  border-radius:.2em  .5em  .5em  .2em;
-}
-
-.page1 {
-  background: #efefef;
-}
-
-.page2 {
-  background: #efefef;
-}
-
-.page3 {
-  background: #f5f5f5;
-}
-
-.page4 {
-  background: #f5f5f5;
-}
-
-.page5 {
-  background: #fafafa;
-}
-
-.page6 {
-  background: #fdfdfd;
-}
-
-.book {
-  position: relative;
-  transition: .4s linear;
-}
-.book.card--active:hover {
-  transform:translate3d(50%,0,0);  z-index: 10;
-  box-shadow: 0 0 18px 7px #000
-}
 
 
-.book.card--active:hover .front {
-  transform: rotateY(-160deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
-}
-
-.book.card--active:hover .page1 {
-  transform: rotateY(-150deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
-}
-
-.book.card--active:hover .page2 {
-  transform: rotateY(-30deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
-}
-
-.book.card--active:hover .page3 {
-  transform: rotateY(-140deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
-}
-
-.book.card--active:hover .page4 {
-  transform: rotateY(-40deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
-}
-
-.book.card--active:hover .page5 {
-  transform: rotateY(-130deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
-}
-
-.book.card--active:hover .page6 {
-  transform: rotateY(-50deg) scale(1.1);
-  box-shadow: 0 1em 3em 0 rgba(0, 0, 0, .2);
-}
-
-.book.card--active:hover .back {
-  transform: rotateY(-20deg) scale(1.1);
-}
-
-.card--past  .book-day {
-  right: 10px;
-  bottom: 10px;
-  left: auto;
-  transform: none;
-  top: auto;
-  font-size: 28px;
-}
 /*//mobile*/
 @media screen and (max-width: 425px) {
   #table-cards-modal {
