--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Henry";
-  src: url('henny-penny.regular.ttf')  format('truetype');  }
+  src: url('../fonts/henny-penny.regular.ttf')  format('truetype');  }
 
 :root{
   --red:linear-gradient(180deg, #a31b1b 46%, #b22323ad 83%);
@@ -195,7 +195,6 @@ color:#000;
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 :root{
@@ -770,7 +769,10 @@ body .fire .logs:before {
   }
 }
 
-
+.version {
+  font-size: 30px;
+  letter-spacing: 0px;
+}
 
 span.second-day {
   position: absolute;
