--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -443,159 +443,8 @@ body .fire .logs:before {
     opacity: 1;
   }
 }
-.card:nth-child(1) {
+.card {
   animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.1s;
-}
-
-.card:nth-child(2) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.2s;
-}
-
-.card:nth-child(3) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.3s;
-}
-
-.card:nth-child(4) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.4s;
-}
-
-.card:nth-child(5) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.5s;
-}
-
-.card:nth-child(6) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.6s;
-}
-
-.card:nth-child(7) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.7s;
-}
-
-.card:nth-child(8) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.8s;
-}
-
-.card:nth-child(9) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 0.9s;
-}
-
-.card:nth-child(10) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1s;
-}
-
-.card:nth-child(11) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.1s;
-}
-
-.card:nth-child(12) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.2s;
-}
-
-.card:nth-child(13) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.3s;
-}
-
-.card:nth-child(14) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.4s;
-}
-
-.card:nth-child(15) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.5s;
-}
-
-.card:nth-child(16) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.6s;
-}
-
-.card:nth-child(17) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.7s;
-}
-
-.card:nth-child(18) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.8s;
-}
-
-.card:nth-child(19) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 1.9s;
-}
-
-.card:nth-child(20) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2s;
-}
-
-.card:nth-child(21) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.1s;
-}
-
-.card:nth-child(22) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.2s;
-}
-
-.card:nth-child(23) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.3s;
-}
-
-.card:nth-child(24) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.4s;
-}
-
-.card:nth-child(25) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.5s;
-}
-
-.card:nth-child(26) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.6s;
-}
-
-.card:nth-child(27) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.7s;
-}
-
-.card:nth-child(28) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.8s;
-}
-
-.card:nth-child(29) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 2.9s;
-}
-
-.card:nth-child(30) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 3s;
-}
-
-.card:nth-child(31) {
-  animation: 1s fadeIn forwards ease-in-out;
-  animation-delay: 3.1s;
 }
 
 .modal--noty {
