--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,21 +5,82 @@
 :root{
   --red:linear-gradient(180deg, #a31b1b 46%, #b22323ad 83%);
   --green:linear-gradient(180deg, rgb(24 101 47 / 82%) 46%, rgb(16 57 28 / 91%) 83%);
+
+
+  --main-bg-color:#001830;
+  --card-color:#fff;
 }
 
 body {
   /*font-family: 'Henry',sans-serif;*/
-  background: #001830!important;
+  background: var(--main-bg-color)!important;
 }
 
 .card {
-  height: 320px;
+  height: 340px;
   perspective: 1200px;
   transform-style: preserve-3d;
   position: relative;
   opacity: 0;
 }
 
+.card__fav {
+  position: absolute;
+  top: -19px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+
+  background: var(--main-bg-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card__fav img {
+  width: 45px;
+}
+.card__date {
+  top: 63px;
+  transform: translateX(-50%);
+  left: 50%;
+  background: var(--card-color);
+  color:var(--main-bg-color);
+}
+
+.card--active  .card__count {
+  bottom: 60px;
+}
+.card__count {
+  bottom: 10px;
+  font-size: 20px;
+  transform: translateX(-50%);
+  left: 50%;
+  background: var(--card-color);
+  color:var(--main-bg-color);
+}
+
+#main-countdown{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+/*  .card__fav:before, .card__fav::after {*/
+/*  content:'';*/
+/*  width: 40px;*/
+/*  height: 40px;*/
+/*  display: block;*/
+/*  position: absolute;*/
+/*  background: #001830;*/
+/*}*/
+
+/*.card__fav:before {*/
+/*  left: -39px;*/
+/*}*/
+
+/*.card__fav:after {*/
+/*  right: -39px;*/
+/*}*/
 .card:not(.card--done) {
   cursor: pointer;
 }
@@ -65,6 +126,8 @@ body {
 .card__front img {
    max-height: 100%;
   object-fit: contain;
+  border-radius: 0 0 25% 26%;
+
 }
 .card__content {
   overflow: hidden;
@@ -80,7 +143,7 @@ body {
   position: absolute;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  background-color: #fff;
+  background-color: var(--card-color);
   border-radius: 0.5rem;
   box-shadow:
           rgba(0, 0, 0, 0.106) 0px 0px 0px 1px,
@@ -93,6 +156,10 @@ color:#000;
   transform-style: preserve-3d;
   transform-origin: center center;
   perspective: 320px;
+
+  border-radius: 20px;
+  border-bottom-left-radius: 160px;
+  border-bottom-right-radius: 160px;
 }
 
 .root-flipped .badge-passed {
@@ -108,7 +175,7 @@ color:#000;
   background: var(--green)
 }
 .card--past .card__front,.card--past .card__back {
-  color:#fff;
+  color:var(--card-color);
 }
 .card--active {
   z-index: 1;
@@ -122,7 +189,7 @@ color:#000;
 .today {
   text-align: center;
   position: absolute;
-  background: #fff;
+  background: var(--card-color);
   border-radius: 50%;
   top: -28px;
   right: -28px;
@@ -475,6 +542,17 @@ body .fire .logs:before {
   position: fixed;
   bottom: 50px;
   right: 50px;
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+}
+.scroll-btn {
+  background: var(--red);
+  color: #fff;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
   width: 50px;
   height: 50px;
   font-size: 20px;
