--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,8 +46,12 @@ body {
   left: 50%;
   background: var(--card-color);
   color:var(--main-bg-color);
+  white-space: nowrap;
 }
-
+.card--past .card__date ,.card--past  .card__count{
+  color:#fff;
+  background: transparent;
+}
 .card--active  .card__count {
   bottom: 60px;
 }
