--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -772,3 +772,7 @@ span.first-day {
     max-width: 400px;
   }
 }
+
+video {    object-fit: none;position: absolute;
+  z-index: -11;
+  filter: blur(5px);    max-height: 300px; width: 100vw}
