--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,18 +1,15 @@
+:root {
+  --red: linear-gradient(180deg, #a31b1b 46%, #b22323ad 83%);
+  --green: linear-gradient(180deg, rgb(24 101 47 / 82%) 46%, rgb(16 57 28 / 91%) 83%);
 
-
-:root{
-  --red:linear-gradient(180deg, #a31b1b 46%, #b22323ad 83%);
-  --green:linear-gradient(180deg, rgb(24 101 47 / 82%) 46%, rgb(16 57 28 / 91%) 83%);
-
-
-  --main-bg-color:#001830;
-  --card-color:#fff;
+  --main-bg-color: #001830;
+  --card-color: #fff;
 }
 
 body {
   /*font-family: 'Henry',sans-serif;*/
-  background: var(--main-bg-color)!important;
-  font-family: "Montserrat", sans-serif;
+  background: var(--main-bg-color) !important;
+  font-family: 'Montserrat', sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
@@ -46,14 +43,15 @@ body {
   transform: translateX(-50%);
   left: 50%;
   background: var(--card-color);
-  color:var(--main-bg-color);
+  color: var(--main-bg-color);
   white-space: nowrap;
 }
-.card--past .card__date ,.card--past  .card__count{
-  color:#fff;
+.card--past .card__date,
+.card--past .card__count {
+  color: #fff;
   background: transparent;
 }
-.card--active  .card__count {
+.card--active .card__count {
   bottom: 60px;
 }
 .card__count {
@@ -62,10 +60,10 @@ body {
   transform: translateX(-50%);
   left: 50%;
   background: var(--card-color);
-  color:var(--main-bg-color);
+  color: var(--main-bg-color);
 }
 
-#main-countdown{
+#main-countdown {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -129,10 +127,9 @@ body {
 }
 
 .card__front img {
-   max-height: 100%;
+  max-height: 100%;
   object-fit: contain;
   border-radius: 0 0 25% 26%;
-
 }
 .card__content {
   overflow: hidden;
@@ -151,12 +148,12 @@ body {
   background-color: var(--card-color);
   border-radius: 0.5rem;
   box-shadow:
-          rgba(0, 0, 0, 0.106) 0px 0px 0px 1px,
-          rgba(0, 0, 0, 0.02) 0px 9px 20px 0px,
-          rgba(0, 0, 0, 0.106) 0px 1px 2px 0px;
+    rgba(0, 0, 0, 0.106) 0px 0px 0px 1px,
+    rgba(0, 0, 0, 0.02) 0px 9px 20px 0px,
+    rgba(0, 0, 0, 0.106) 0px 1px 2px 0px;
   display: flex;
   align-items: center;
-color:#000;
+  color: #000;
   justify-content: center;
   transform-style: preserve-3d;
   transform-origin: center center;
@@ -173,14 +170,16 @@ color:#000;
 .card--past {
   overflow: hidden;
 }
-.card--past .card__front , .card--past .card__back{
+.card--past .card__front,
+.card--past .card__back {
   background: var(--red);
 }
-.card--done .card__front{
-  background: var(--green)
+.card--done .card__front {
+  background: var(--green);
 }
-.card--past .card__front,.card--past .card__back {
-  color:var(--card-color);
+.card--past .card__front,
+.card--past .card__back {
+  color: var(--card-color);
 }
 .card--active {
   z-index: 1;
@@ -251,7 +250,6 @@ color:#000;
   padding: 10px;
 }
 
-
 .user-btn {
   width: 100px;
 }
@@ -269,8 +267,8 @@ color:#000;
   align-items: center;
 }
 
-:root{
-  --fire-size:20vw;
+:root {
+  --fire-size: 20vw;
 }
 .fire {
   position: absolute;
@@ -289,9 +287,8 @@ color:#000;
   text-align: center;
   /*background: -webkit-linear-gradient(#fed100, #a22a07);*/
   font-size: 20px;
-  color:#fff;
+  color: #fff;
 }
-
 
 body .fire .flames {
   position: absolute;
@@ -307,10 +304,10 @@ body .fire .flames .flame {
   bottom: 0%;
   width: 0%;
   height: 0%;
-  background-color: #FFDC01;
+  background-color: #ffdc01;
   border-radius: 1vw;
 }
-body .fire .flames .flame:nth-child(2n+1) {
+body .fire .flames .flame:nth-child(2n + 1) {
   -webkit-animation: flameodd 1.5s ease-in infinite;
   animation: flameodd 1.5s ease-in infinite;
 }
@@ -342,24 +339,26 @@ body .fire .logs {
   width: 100%;
   height: 15%;
 }
-body .fire .logs:before, body .fire .logs:after {
+body .fire .logs:before,
+body .fire .logs:after {
   position: absolute;
-  content: "";
+  content: '';
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(20deg);
   height: 100%;
   width: 100%;
   border-radius: 1vw;
-  background-color: #70392F;
+  background-color: #70392f;
 }
 body .fire .logs:before {
   transform: translate(-50%, -50%) rotate(-20deg);
-  background-color: #612E25;
+  background-color: #612e25;
 }
 
 @-webkit-keyframes flameodd {
-  0%, 100% {
+  0%,
+  100% {
     width: 0%;
     height: 0%;
   }
@@ -368,15 +367,15 @@ body .fire .logs:before {
     height: 100%;
   }
   0% {
-    background-color: #FFDC01;
+    background-color: #ffdc01;
     z-index: 1000000;
   }
   40% {
-    background-color: #FDAC01;
+    background-color: #fdac01;
     z-index: 1000000;
   }
   100% {
-    background-color: #F73B01;
+    background-color: #f73b01;
     z-index: -10;
   }
   0% {
@@ -394,7 +393,8 @@ body .fire .logs:before {
 }
 
 @keyframes flameodd {
-  0%, 100% {
+  0%,
+  100% {
     width: 0%;
     height: 0%;
   }
@@ -403,15 +403,15 @@ body .fire .logs:before {
     height: 100%;
   }
   0% {
-    background-color: #FFDC01;
+    background-color: #ffdc01;
     z-index: 1000000;
   }
   40% {
-    background-color: #FDAC01;
+    background-color: #fdac01;
     z-index: 1000000;
   }
   100% {
-    background-color: #F73B01;
+    background-color: #f73b01;
     z-index: -10;
   }
   0% {
@@ -428,7 +428,8 @@ body .fire .logs:before {
   }
 }
 @-webkit-keyframes flameeven {
-  0%, 100% {
+  0%,
+  100% {
     width: 0%;
     height: 0%;
   }
@@ -437,15 +438,15 @@ body .fire .logs:before {
     height: 100%;
   }
   0% {
-    background-color: #FFDC01;
+    background-color: #ffdc01;
     z-index: 1000000;
   }
   40% {
-    background-color: #FDAC01;
+    background-color: #fdac01;
     z-index: 1000000;
   }
   100% {
-    background-color: #F73B01;
+    background-color: #f73b01;
     z-index: -10;
   }
   0% {
@@ -462,7 +463,8 @@ body .fire .logs:before {
   }
 }
 @keyframes flameeven {
-  0%, 100% {
+  0%,
+  100% {
     width: 0%;
     height: 0%;
   }
@@ -471,15 +473,15 @@ body .fire .logs:before {
     height: 100%;
   }
   0% {
-    background-color: #FFDC01;
+    background-color: #ffdc01;
     z-index: 1000000;
   }
   40% {
-    background-color: #FDAC01;
+    background-color: #fdac01;
     z-index: 1000000;
   }
   100% {
-    background-color: #F73B01;
+    background-color: #f73b01;
     z-index: -10;
   }
   0% {
@@ -496,8 +498,8 @@ body .fire .logs:before {
   }
 }
 
-.modal .content{
-  color:#000;
+.modal .content {
+  color: #000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -505,7 +507,6 @@ body .fire .logs:before {
 .month {
   letter-spacing: 0px;
 }
-
 
 @keyframes fadeIn {
   0% {
@@ -520,7 +521,7 @@ body .fire .logs:before {
 }
 
 .modal--noty {
-  padding: 0!important;
+  padding: 0 !important;
   margin: 0;
 }
 
@@ -536,13 +537,12 @@ body .fire .logs:before {
 }
 
 .user-btn {
-  background:#111827!important;
+  background: #111827 !important;
 }
 
-
 .zoom-btn {
-  background:var(--red);
-  color:#fff;
+  background: var(--red);
+  color: #fff;
   border-radius: 50%;
   position: fixed;
   bottom: 50px;
@@ -569,11 +569,11 @@ body .fire .logs:before {
   /*grid-template-columns: repeat(auto-fit, minmax(46px, 1fr));*/
   grid-template-columns: repeat(7, 1fr);
 
-  gap:5px;
+  gap: 5px;
   position: relative;
 }
 
-.table-cards__item{
+.table-cards__item {
   /*width: 50px;*/
   height: 70px;
   background: var(--red);
@@ -583,7 +583,7 @@ body .fire .logs:before {
 }
 .table-cards__day {
   position: absolute;
-  color:#fff;
+  color: #fff;
   right: 5px;
   font-weight: bold;
   bottom: 5px;
@@ -606,14 +606,14 @@ body .fire .logs:before {
   font-size: 20px;
 }
 .table-cards__item-pic img {
-  width:78%;
+  width: 78%;
 }
 
 #table-cards-modal {
   padding: 10px;
 }
 
-.table-cards__item  .today {
+.table-cards__item .today {
   font-size: 6px;
   width: 30px;
   height: 30px;
@@ -630,22 +630,22 @@ body .fire .logs:before {
   font-weight: bold;
 }
 
-.fire-pic{
+.fire-pic {
   display: inline-block;
   width: 112px;
   vertical-align: top;
   margin-left: -23px;
 }
 
-.logo{
+.logo {
   font-weight: bold;
   font-size: 26px;
 }
 .logo__highlight {
-  color:var(--red);
+  color: var(--red);
 }
 
-.fireworks{
+.fireworks {
   position: fixed;
   top: 0;
   left: 0;
@@ -653,9 +653,6 @@ body .fire .logs:before {
   width: 100%;
   height: 100%;
 }
-
-
-
 
 .toggle-btn {
   position: relative;
@@ -667,7 +664,7 @@ body .fire .logs:before {
   transition: all 0.4s ease;
 }
 .toggle-btn.toggle-btn--done {
-  background:#ffd70078;
+  background: #ffd70078;
 }
 .toggle-btn .icon {
   position: absolute;
@@ -722,12 +719,10 @@ span.first-day {
   font-size: 33px;
   color: #000;
   transform: rotate(-39deg) skew(0deg, 19deg);
-
 }
 
-
 .date-range {
-  font-size: clamp(18px, 4vw,40px)!important;
+  font-size: clamp(18px, 4vw, 40px) !important;
 }
 /*//mobile*/
 @media screen and (max-width: 425px) {
@@ -739,41 +734,336 @@ span.first-day {
     font-size: 17px;
   }
 
-  #sticky{
-    width: 200px!important;
+  #sticky {
+    width: 200px !important;
   }
   .header {
-    font-size: 47px!important;
+    font-size: 47px !important;
   }
 }
 @media screen and (max-width: 900px) {
   :root {
-    --fire-size:40vh;
+    --fire-size: 40vh;
   }
   .modal--noty h1 {
     font-size: 25px;
   }
-  .zoom-btn{
+  .zoom-btn {
     right: 10px;
     bottom: 20px;
   }
-  .fire-pic{
+  .fire-pic {
     width: 50px;
     vertical-align: middle;
     margin-left: -11px;
   }
-  .modal{
-    width: 97%!important;
+  .modal {
+    width: 97% !important;
   }
-
-
 }
-@media screen and (min-width: 900px){
+@media screen and (min-width: 900px) {
   #table-cards-modal {
     max-width: 400px;
   }
 }
 
-video {    object-fit: none;position: absolute;
+body {
+  overflow: hidden;
+}
+video {
+  object-fit: none;
+  position: absolute;
   z-index: -11;
-  filter: blur(5px);    max-height: 300px; width: 100vw}
+  filter: blur(5px);
+  max-height: 300px;
+  width: 100vw;
+}
+
+.anim-item {
+  position: absolute;
+  opacity: 0;
+}
+
+/* Item 1: из левого верхнего угла */
+.anim-item:nth-of-type(1) {
+  left: 0;
+  top: 0px;
+  max-width: 500px;
+  animation: slideInFromTopLeft 1s ease-out 0.2s forwards;
+}
+
+@keyframes slideInFromTopLeft {
+  from {
+    opacity: 0;
+    transform: translate(-100px, -100px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+/* Item 2: из правого нижнего угла */
+.anim-item:nth-of-type(2) {
+  right: 0;
+  bottom: 0;
+  max-width: 300px;
+  animation: slideInFromBottomRight 1s ease-out 0.4s forwards;
+}
+
+@keyframes slideInFromBottomRight {
+  from {
+    opacity: 0;
+    transform: translate(100px, 100px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+/* Item 3: из левого нижнего угла */
+.anim-item:nth-of-type(3) {
+  left: 0;
+  bottom: 0;
+  max-height: 450px;
+  animation: slideInFromBottomLeft 1s ease-out 0.6s forwards;
+}
+
+@keyframes slideInFromBottomLeft {
+  from {
+    opacity: 0;
+    transform: translate(-150px, 150px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+/* Item 4: из правого верхнего угла (за границы) */
+.anim-item:nth-of-type(4) {
+  top: -100px;
+  right: -300px;
+  animation: slideInFromTopRight 1.2s ease-out 0.8s forwards;
+}
+
+@keyframes slideInFromTopRight {
+  from {
+    opacity: 0;
+    transform: translate(200px, -200px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+/* Item 5: из центра экрана (с масштабом) */
+.anim-item:nth-of-type(5) {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: zoomIn 1s ease-out 1s forwards;
+}
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.3);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+/* Item 5: из центра экрана (с масштабом) */
+.anim-item:nth-of-type(6) {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: zoomIn 1s ease-out 1s forwards;
+  animation-delay: 2s;
+}
+.say {
+  position: absolute;
+  background: #fff;
+  color: #000;
+  padding: 20px;
+
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(14%, 36%);
+  box-shadow: 1px 1px 9px 1px #00000063;
+}
+
+.say-1 {
+  animation: fade 1s ease-out 1s forwards;
+  animation-delay: 5s;
+  z-index: 9;
+}
+
+.say-2 {
+  animation: fade 1s ease-out 1s forwards;
+  animation-delay: 8s;
+  z-index: 10;
+}
+
+.say-3 {
+  animation: fade 1s ease-out 1s forwards;
+  animation-delay: 12s;
+  z-index: 11;
+}
+@keyframes fade {
+  from {
+    opacity: 0;
+    top: 45%;
+  }
+  to {
+    opacity: 1;
+    top: 50%;
+  }
+}
+
+.l-wrap {
+  position: absolute;
+
+  height: 100vh;
+  width: 100vw;
+  background: var(--main-bg-color) !important;
+  z-index: 100;
+}
+
+.loaderr {
+  width: 48px;
+  height: 48px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  border: 5px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.text {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Rubik Glitch', system-ui;
+  font-weight: bold;
+  font-style: normal;
+  font-weight: bold;
+  font-style: normal;
+}
+.say .text {
+  /* background: #001830;
+  color: #fff; */
+  margin-bottom: 4px;
+  padding: 4px;
+}
+
+input,
+button {
+  border: 1px solid #000;
+  font-family: 'Rubik Glitch', system-ui;
+  padding: 10px;
+}
+
+.upload {
+  position: absolute;
+  padding: 16px 32px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  background: linear-gradient(135deg, #001830, #145ea8, #ff9ff3, #54a0ff);
+  background-size: 300% 300%;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  box-shadow:
+    0 10px 30px rgba(255, 107, 107, 0.4),
+    inset 0 2px 0 rgba(255, 255, 255, 0.3);
+  transition: all 0.3s ease;
+  overflow: hidden;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: spinIn 1.2s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+}
+
+@keyframes spinIn {
+  0% {
+    opacity: 0;
+    transform: rotate(-360deg) scale(0.3);
+  }
+  50% {
+    opacity: 0.7;
+    transform: rotate(-180deg) scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: rotate(0deg) scale(1) translate(-50%, -50%);
+  }
+}
+
+.upload:hover {
+  transform: translateY(-3px);
+  box-shadow:
+    0 20px 40px rgba(255, 107, 107, 0.6),
+    inset 0 2px 0 rgba(255, 255, 255, 0.4);
+  background-position: 100% 0;
+}
+
+.upload:active {
+  transform: translateY(-1px);
+}
+
+.upload::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+  transition: left 0.5s;
+}
+
+.upload:hover::before {
+  left: 100%;
+}
+
+/* Анимация получения подарка */
+@keyframes celebrate {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1) rotate(5deg);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.gift-button.success {
+  animation: celebrate 0.6s ease;
+  background: linear-gradient(135deg, #00b894, #00cec9);
+}
