--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,8 @@
 body {
   /*font-family: 'Henry',sans-serif;*/
   background: var(--main-bg-color) !important;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Pattaya', serif;
+
   font-optical-sizing: auto;
   font-style: normal;
 }
@@ -854,8 +855,7 @@ body {
 .container {
   position: relative;
   z-index: 2;
-  max-width: 500px;
-  width: 95%;
+  width: 100%;
 }
 
 .card {
@@ -1058,6 +1058,7 @@ input[type='input']:focus {
   font-size: 0.9em;
   margin-top: 10px;
   animation: shake 0.5s ease;
+  white-space: pre-line;
 }
 
 @keyframes shake {
@@ -1113,11 +1114,11 @@ input[type='input']:focus {
 
 @media (max-width: 600px) {
   .title {
-    font-size: 1.8em;
+    font-size: 1.7em;
   }
 
   .greeting-title {
-    font-size: 1.6em;
+    font-size: 1.5em;
   }
 
   .card {
@@ -1161,4 +1162,18 @@ input[type='input']:focus {
   100% {
     opacity: 0;
   }
+}
+
+.container-filter {
+  filter: blur(5px);
+}
+
+.bbox {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 11111;
 }
